--- a/configs/260102_masktest.yaml
+++ b/configs/260102_masktest.yaml
@@ -2,18 +2,18 @@
 
 # Data paths
 data:
-  root_dir: "/home/xhsystem/Code/Term7/Ca3OH1/data_contact"  # Root directory containing categories
+  root_dir: "/home/rtwang/workspace/Contact/data_contact"  # Root directory containing categories
   smplx_model_path: "smplx_models"  # Path to SMPLX model files (NEUTRAL.pkl, etc.)
   smplx_model_type: "neutral"  # neutral, male, or female
   img_size: [512, 512]  # [H, W]
-  num_workers: 4
+  num_workers: 8
   
-  # Train/Val/Test split ratio (17:2:1)
-  train_ratio: 0.80  # 408/510
-  val_ratio: 0.20   # 102/510
-  test_ratio: 0.00   # 0/510
+  # Train/Val/Test split ratio
+  train_ratio: 0.9
+  val_ratio: 0.07
+  test_ratio: 0.03
   
-  random_seed: 429
+  random_seed: 42
 
 # Model architecture
 model:
@@ -21,11 +21,11 @@ model:
   visual_feat_dim: 384  # ResNet layer2(128) + layer3(256) = 384
   geometry_feat_dim: 3  # normalized xyz
   normal_feat_dim: 3    # normals
-  flag_feat_dim: 3      # is_inside_img(1) + is_inside_box(1) + dist_to_center(1)
+  flag_feat_dim: 4      # is_inside_img(1) + is_inside_box(1) + dist_to_center(1) + mask_dist(1)
   pose_embed_dim: 32    # pose embedding dimension
   
-  # Total input dim: 384 + 3 + 3 + 3 + 32 = 425
-  total_feat_dim: 425
+  # Total input dim: 384 + 3 + 3 + 4 + 32 = 426
+  total_feat_dim: 426
   
   # MLP Head architecture
   hidden_dims: [256, 128]  # Two hidden layers
@@ -38,13 +38,13 @@ model:
 
 # Training
 training:
-  batch_size: 8  # Adjust based on GPU memory
-  num_epochs: 100
-  learning_rate: 0.001
+  batch_size: 16  # Adjust based on GPU memory
+  num_epochs: 200
+  learning_rate: 0.00005
   weight_decay: 0.0001
   
   # Loss function
-  pos_weight: 5.0  # Weight for positive class (contact)
+  pos_weight: 3.0  # Weight for positive class (contact)
   
   # Optimizer
   optimizer: "adamw"
@@ -56,22 +56,22 @@ training:
     gamma: 0.5
   
   # Checkpoint
-  save_dir: "checkpoints/251226_1"
-  save_frequency: 5  # Save every N epochs
+  save_dir: "checkpoints/260102_masktest"
+  save_frequency: 10  # Save every N epochs
   resume_from: null  # Path to checkpoint to resume from
   
   # Logging
-  log_interval: 10  # Print loss every N iterations
+  log_interval: 5  # Print loss every N iterations
   
 # Validation
 validation:
-  val_frequency: 5  # Validate every N epochs
+  val_frequency: 1  # Validate every N epochs
   
 # Visualization (for debugging)
 visualization:
   enabled: true
-  save_dir: "visualizations/251226_1"
-  num_samples: 15  # Number of samples to visualize per epoch
-  
+  save_dir: "visualizations/260102_masktest"
+  num_samples: 4  # Number of samples to visualize per epoch
+  save_frequency: 10  # Save visualizations every N epochs (set to higher value to reduce I/O overhead)
 # Device
 device: "cuda"  # cuda or cpu
