feat: enhance auto-training with subset training option and validation control

--- a/configs/260102_1.yaml
+++ b/configs/260102_1.yaml
@@ -78,3 +78,8 @@ visualization:
   
 # Device
 device: "cuda"  # cuda or cpu
+
+# Auto-train (Hybrid Scheduler)
+autotrain:
+  small_update_freq: 10
+  big_update_freq: 80
